# XRBs

./: .gitignore  IMF_norm.py  LICENSE  README.md  Zmap.py  galSpec.py  galaxies.py  grid2D.py  helper.py  map_box.py  myplot.py  read_head.py  setup.cfg  setup.py  xrb_main.py  xrb_units.py
src/PhoxUtil/: IMF_norm.py  Utils.py  galSpec.py  galaxies.py  phox_data.py  xrb_main.py  xrb_units.py
