[metadata]
name = PhoxUtil
version = 0.1
author = Stephan Vladutescu-Zopp
author_email = vladutescu@usm.lmu.de
license = MIT
license_file = LICENSE
description = Utillity package for processing PHOX data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/svz71195/XRBs/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = PhoxUtil
python_requires = >=3.6

# [options.packages.find]
# where = src